--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,13 +3,13 @@
 // Gray and Brand Colors for use across theme
 
 $theme-primary:    #f5f5f5;
-$theme-danger:     #e74c3c;
-//$theme-grey:		#323a49;
+$theme-danger:     #ffbcbc;
+
 $theme-grey: 		#252525;
 $theme-links: 		#222222;
 
-$plus-icon-dark:	#222222;
-$plus-icon-light:	#fff;
+$plus-icon-color:	#fff;
+
 
 $gray-base:			#000 !default;
 $gray-darker:		lighten($gray-base, 13.5%) !default; // #222
