--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -49,12 +49,13 @@ a.active {
 }
 a.link-theme-color {
     color: $theme-links;
+    text-decoration: underline;
         a:hover,
         a:focus,
         a:active,
         a.active {
             color: darken($theme-primary, 10%);
-            text-decoration: underline;
+            
         }
 }
 
@@ -92,6 +93,12 @@ h1, h2, h3, h4, h5, h6 {
     padding: 20px 40px;
 }
 
+#contactForm .btn-xl {
+    @include button-variant(white, darken($theme-grey, 10%), darken($theme-grey, 10%));
+}
+
+
+
 // Custom Navigation Bar
 
 .navbar-custom {
@@ -106,7 +113,6 @@ h1, h2, h3, h4, h5, h6 {
         &:focus,
         &:active,
         &.active {
-            //color: darken($theme-primary, 10%);
             color: $theme-primary;
         }
     }
@@ -114,15 +120,13 @@ h1, h2, h3, h4, h5, h6 {
         border-color: fade-out(white, .02);
     }
     .navbar-toggle {
-        //background-color: $theme-primary;
-        //border-color: $theme-primary;
         border:none;
         @include heading-font;
         color: white;
         font-size: 12px;
         &:hover,
         &:focus {
-            background-color: none;
+            background-color: transparent;
         }
     }
     .nav {
@@ -315,7 +319,9 @@ section {
             max-width: 400px;
             margin: 0 auto;
             .portfolio-hover {
-                background: fade-out($theme-primary, .9);
+                background: fade-out($theme-grey, .3);
+                
+              
                 position: absolute;
                 width: 100%;
                 height: 100%;
@@ -337,10 +343,9 @@ section {
                     color: $theme-links;
                     i {
                         margin-top: -12px;
-                        color: $plus-icon-light;
+                        color: $plus-icon-color;
                         
-                        &.fa-dark { color: $plus-icon-dark; }
-                        &.fa-light { color: $plus-icon-light; }
+                        
                     }
                     h3,
                     h4 {
@@ -593,10 +598,13 @@ aside.clients {
 // Contact Section
 
 section#contact {
-    background-color: $gray-darker;
+    background-color: $theme-grey;
     background-image: url('../img/map-image.png');
     background-position: center;
     background-repeat: no-repeat;
+    h3 {
+        color: white;
+    } 
     .section-heading {
         color: white;
     }
@@ -686,7 +694,7 @@ ul.social-buttons {
         }
     }
 }
-
+ 
 .btn:focus,
 .btn:active,
 .btn.active,
